--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "wax-poetic-records",
   "version": "0.0.0",
-  "description": "Small description for wax-poetic-records goes here",
+  "description": "Catalog site for Wax Poetic Records"
   "license": "MIT",
-  "author": "",
+  "author": "Tom Scott <tscott@waxpoeticrecords.com>",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "",
+  "repository": "https://github.com/waxpoetic/catalog.git",
   "scripts": {
     "build": "ember build",
     "start": "ember server",
@@ -21,17 +21,17 @@
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
     "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-emblem": "0.8.2-beta.2",
     "ember-cli-eslint": "^3.0.0",
     "ember-cli-htmlbars": "^1.1.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.6",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^3.1.0",
     "ember-cli-release": "^0.2.9",
+    "ember-cli-sass": "^6.1.2",
     "ember-cli-shims": "^1.0.2",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-cli-waxpoetic": "^0.0.0",
+    "ember-cli-waxpoetic": "waxpoetic/ember-cli-waxpoetic",
     "ember-data": "^2.12.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.6.0",
